@@ -16,6 +16,8 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with OpenQuake.  If not, see <http://www.gnu.org/licenses/>.
 
+import ast
+import collections
 import numpy
 
 
@@ -64,3 +66,68 @@ class Hdf5Dataset(object):
         Append a compatible tuple of data to the underlying dataset
         """
         self.extend(numpy.array([tup], self.dtype))
+
+KEYLEN = 50
+VALUELEN = 200
+info_dt = numpy.dtype([('key', (bytes, KEYLEN)), ('value', (bytes, VALUELEN))])
+
+
+def check_len(key, value):
+    """
+    Check the lengths of `key` and `value` and raise a ValueError if they
+    are too long. Otherwise, returns the pair (key, value).
+    """
+    if len(key) > KEYLEN:
+        raise ValueError(
+            'An instance of Serializable cannot have '
+            'public attributes longer than %d chars; '
+            '%r has %d chars' % (KEYLEN, key, len(key)))
+    rep = repr(value)
+    if len(rep) > VALUELEN:
+        raise ValueError(
+            'Attribute %r too long: %d > %d' % (key, len(rep), VALUELEN))
+    return key, rep
+
+
+class LiteralAttrs(object):
+    """
+    A mixin class to serialize attributes to HDF5. It treats specially
+    dictionaries. It works at a single level of nesting.
+
+    >>> class Ser(LiteralAttrs):
+    ...     def __init__(self, a, b):
+    ...         self.a = a
+    ...         self.b = b
+    >>> ser = Ser(1, dict(x='xxx', y='yyy'))
+    >>> arr, attrs = ser.__toh5__()
+    >>> print arr
+    [('a', '1') ('b.x', "'xxx'") ('b.y', "'yyy'")]
+    >>> s = object.__new__(Ser)
+    >>> s.__fromh5__(arr, attrs)
+    >>> s.a
+    1
+    >>> s.b['x']
+    'xxx'
+    """
+    def __toh5__(self):
+        attrnames = sorted(a for a in vars(self) if not a.startswith('_'))
+        lst = []
+        for attr in attrnames:
+            value = getattr(self, attr)
+            if isinstance(value, dict):
+                for k, v in sorted(value.items()):
+                    key = '%s.%s' % (attr, k)
+                    lst.append(check_len(key, v))
+            else:
+                lst.append(check_len(attr, value))
+        return numpy.array(lst, info_dt), {}
+
+    def __fromh5__(self, array, attrs):
+        dd = collections.defaultdict(dict)
+        for (name, literal) in array:
+            if '.' in name:
+                k1, k2 = name.split('.')
+                dd[k1][k2] = ast.literal_eval(literal)
+            else:
+                dd[name] = ast.literal_eval(literal)
+        vars(self).update(dd)
