@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added a LiteralAttrs class to serialize literal attributes on HDF5
   * Added to the Monitor the ability to send commands
 
 python-oq-hazardlib (0.19.0-0~precise01) precise; urgency=low
